Add : Loading Screen

--- a/src/style.css
+++ b/src/style.css
@@ -14,3 +14,12 @@ body {
   left: 0;
   outline: none;
 }
+#LoadingPercent {
+  position: fixed;
+  color: white;
+  width: 50%;
+  margin: 10px 10px 10px 10px;
+  border: 2px solid white;
+  border-radius: 20px;
+  text-align: center;
+}
