--- a/src/style.css
+++ b/src/style.css
@@ -14,12 +14,19 @@ body {
   left: 0;
   outline: none;
 }
-#LoadingPercent {
+
+#buttonload {
+  background-color: #000000; /* Green background */
+  color: white; /* White text */
+  padding: 12px 16px; /* Some padding */
+  font-size: 16px; /* Set a font size */
+}
+
+.vertical-center {
+  margin: 0;
   position: absolute;
-  margin: 10px;
-  color: white;
-  width: 50%;
-  border: 2px solid white;
-  border-radius: 20px;
-  text-align: center;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
